--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <option value="python">Python</option>
     </select>
 
-    <div class="textarea-container">
+    <div class="code-container">
       <div id="lineNumbers" class="line-numbers"></div>
       <textarea id="codeInput" placeholder="Paste your code here..."></textarea>
     </div>
