--- a/index.html
+++ b/index.html
@@ -23,9 +23,26 @@
     <div class="buttons">
       <input type="file" id="fileUpload" accept=".py">
       <button onclick="checkCode()">Check Code</button>
+      <button id="settingsBtn" onclick="toggleSettings()">Settings</button>
     </div>
 
     <div id="results"></div>
+
+    <!-- Settings Panel -->
+    <div id="settingsPanel" class="settings-panel">
+      <h3>Settings</h3>
+      <label>
+        <input type="checkbox" id="darkModeToggle"> Dark Mode
+      </label>
+      <br>
+      <label>
+        Font Size:
+        <input type="number" id="fontSizeInput" value="15" min="10" max="30"> px
+      </label>
+      <br>
+      <button onclick="applySettings()">Apply Settings</button>
+      <button onclick="resetSettings()">Reset</button>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"></script>
