--- a/index.html
+++ b/index.html
@@ -1,52 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Code Suspicion Checker</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-tomorrow.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Code Suspicion Checker</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-tomorrow.min.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Code Suspicion Checker</h1>
-    <p>Paste your code or upload a file. Select the language for syntax highlighting:</p>
+    <div class="container">
+        <h1>Code Suspicion Checker</h1>
+        <p>Paste your code or upload a file. Select the language for syntax highlighting:</p>
 
-    <select id="languageSelect">
-      <option value="python">Python</option>
-    </select>
+        <select id="languageSelect">
+            <option value="python">Python</option>
+        </select>
 
-    <div class="code-container">
-      <div id="lineNumbers" class="line-numbers"></div>
-      <textarea id="codeInput" placeholder="Paste your code here..."></textarea>
+        <textarea id="codeInput" placeholder="Paste your code here..."></textarea>
+
+        <div class="buttons">
+            <input type="file" id="fileUpload" accept=".py">
+            <button onclick="checkCode()">Check Code</button>
+            <button id="settingsBtn" onclick="toggleSettings()">Settings</button>
+        </div>
+
+        <div id="results"></div>
+
+        <!-- Settings Panel -->
+        <div id="settingsPanel" class="settings-panel">
+            <h3>Settings</h3>
+            <label>
+                <input type="checkbox" id="darkModeToggle"> Dark Mode
+            </label>
+            <br>
+            <label>
+                Font Size:
+                <input type="number" id="fontSizeInput" value="15" min="10" max="30"> px
+            </label>
+            <br>
+            <button onclick="applySettings()">Apply Settings</button>
+            <button onclick="resetSettings()">Reset</button>
+        </div>
     </div>
 
-    <div class="buttons">
-      <input type="file" id="fileUpload" accept=".py">
-      <button onclick="checkCode()">Check Code</button>
-      <button id="settingsBtn" onclick="toggleSettings()">Settings</button>
-    </div>
-
-    <div id="results"></div>
-
-    <!-- Settings Panel -->
-    <div id="settingsPanel" class="settings-panel">
-      <h3>Settings</h3>
-      <label>
-        <input type="checkbox" id="darkModeToggle"> Dark Mode
-      </label>
-      <br>
-      <label>
-        Font Size:
-        <input type="number" id="fontSizeInput" value="15" min="10" max="30"> px
-      </label>
-      <br>
-      <button onclick="applySettings()">Apply Settings</button>
-      <button onclick="resetSettings()">Reset</button>
-    </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-python.min.js"></script>
-  <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-python.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
