--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
 
         <select id="languageSelect">
             <option value="python">Python</option>
+            <option value="javascript">JavaScript</option>
+            <option value="html">HTML</option>
+            <option value="css">CSS</option>
+            <option value="java">Java</option>
+            <option value="php">PHP</option>
+            <option value="ruby">Ruby</option>
         </select>
 
         <textarea id="codeInput" placeholder="Paste your code here..."></textarea>
 
         <div class="buttons">
-            <input type="file" id="fileUpload" accept=".py">
+            <input type="file" id="fileUpload" accept=".py, .js, .html, .css, .java, .php, .rb">
             <button onclick="checkCode()">Check Code</button>
             <button id="settingsBtn" onclick="toggleSettings()">Settings</button>
         </div>
@@ -38,6 +44,11 @@
                 <input type="number" id="fontSizeInput" value="15" min="10" max="30"> px
             </label>
             <br>
+            <label>
+                Line Spacing:
+                <input type="number" id="lineSpacingInput" value="1.5" step="0.1" min="1" max="3"> em
+            </label>
+            <br>
             <button onclick="applySettings()">Apply Settings</button>
             <button onclick="resetSettings()">Reset</button>
         </div>
@@ -45,6 +56,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-python.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-javascript.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-css.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-java.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-php.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-ruby.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
